[GTK] fast/text/font-kerning.html fails https://bugs.webkit.org/show_bug.cgi?id=76048

Patch by Denis Nomiyama <d.nomiyama@samsung.com> on 2013-07-05
Reviewed by Martin Robinson.

Added kerning to the list of features for hb_shade() according to FontDescription::kerning().
Removed font-kerning.html from gtk/TestExpectations, which was failing before this fix.

Source/WebCore:

* platform/graphics/harfbuzz/HarfBuzzFace.cpp:
(WebCore):
* platform/graphics/harfbuzz/HarfBuzzFace.h:
(HarfBuzzFace):
* platform/graphics/harfbuzz/HarfBuzzShaper.cpp:
(WebCore::HarfBuzzShaper::setFontFeatures):

LayoutTests:

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/136404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152411 268f45cc-cd09-0410-ab3c-d52691b4dbfc